--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "source-map-resolve": "^0.6.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -47,7 +48,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.4",
     "autoprefixer": "^10.4.7",
     "gh-pages": "^3.2.3",
-    "postcss": "^8.4.13",
+    "postcss": "^8.4.16",
     "tailwindcss": "^3.0.24"
   }
 }
