--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.4",
-    "autoprefixer": "^10.4.12",
+    "@tailwindcss/typography": "^0.5.8",
+    "autoprefixer": "^10.4.13",
     "gh-pages": "^3.2.3",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1"
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
