--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iansteele.github.io/portfolio",
+  "homepage": "https://iansteele.design",
   "dependencies": {
     "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.11.10",
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "source-map-resolve": "^0.6.0",
     "web-vitals": "^1.1.1"
