--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
     "next-google-fonts": "^2.2.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
